<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_resultTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="32sp"
        android:paddingTop="24sp"
        android:text="@string/test_result" />

    <LinearLayout
        android:id="@+id/TestResultContainerAllTest"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:paddingTop="30sp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/txtNumberOfText"
            style="@style/ResultText"
            android:text="@string/finished_tests" />

        <TextView
            android:id="@+id/txt_FinishedTestContainer"
            style="@style/ResultText"
            android:layout_marginStart="99sp"
            android:text="@string/def_val"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/TestResultContainerChosenSnacks"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/txtChosenSnacks"
            style="@style/ResultText"
            android:text="@string/larger_quantity_selected" />

        <TextView
            android:id="@+id/txt_ChosenSnacksContainer"
            style="@style/ResultText"
            android:layout_marginStart="30sp"
            android:text="@string/def_val"/>
    </LinearLayout>

    <TextView
        android:id="@+id/txtPercentage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="120sp"
        android:textSize="70sp"
        android:text="@string/percent"/>

    <Button
        android:id="@+id/backToMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60sp"
        android:textSize="30sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/ok" />

</LinearLayout>